# claude-skill-registry

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SCHEME2_SPLIT.md  SECURITY.md  THIRD_PARTY_NOTICES.md  failure_report.json  pyproject.toml  repo_cache.json  requirements.txt
categories/: .github-skills.json  .template.json  0-claude.json  0-planning.json  0-prompt-architect.json  0-research.json  0-sequential-thinking.json  0-ui-ux-pro-max.json  0000.json  0100.json  0200.json  03-investment-and-time-accounting.json  04-systematic-slow-reading.json  05-thinking-by-writing.json  06-thinking-by-speaking.json  06f65bbf-3f3a-4a19-a3c2-46ec20d03f26.json  09-strategizing.json  0b1c2d3e-4f5a-6b7c-8d9e-0f1a2b3c4d5e.json  0b8b1962-b81e-41a0-968c-1e79aefb0cec.json  0d1e2f3a-4b5c-6d7e-8f9a-0b1c2d3e4f5a.json  1.clarity.json  1.json  10-planning.json  18.0.json  1a2b3c4d-5e6f-7a8b-9c0d-1e2f3a4b5c6d.json  1c2d3e4f-5a6b-7c8d-9e0f-1a2b3c4d5e6f.json  1d-cutting-stock.json  1e2f3a4b-5c6d-7e8f-9a0b-1c2d3e4f5a6b.json  1k-adding-chains.json  1k-adding-socket-events.json  1k-architecture.json  1k-coding-patterns.json  1k-cross-platform.json  1k-date-formatting.json  1k-dev-commands.json  1k-git-workflow.json  1k-i18n.json  1k-state-management.json  1password.json  2.identify.json  (+13830 more)
crawler/: __init__.py  skillsmp_sync.py
docs/: FAST_CLONE.md  SECURITY_GUIDE.md  SECURITY_SYSTEM_OVERVIEW.md  featured.json  index.html  stats.json  supabase-schema.sql
plan/: 2026-02-05_15-02-01-split-core-data-main.md
provenance/: merge-source.json
schema/: metadata.schema.json  skill.schema.json
scripts/: CLAUDE.md  build_registry.py  build_search_index.py  check_case_conflicts.py  check_metadata_compliance.py  clone_and_import.py  deduplicate_skills.py  deep_import.py  discover_by_topic.py  download_fast.py  download_from_search.py  download_multiprocess.py  download_optimized.py  download_skills_async.py  download_skills_v2.py  download_sources.py  download_v2.py  fast_clone.sh  find_all_skills.py  find_all_skills_v2.py  find_skills_by_clone.py  fix_github_paths.py  github_code_search.py  migrate_skills.py  migrate_to_data_repo.sh  normalize_skill_depth.py  normalize_skill_dirs.py  rebuild_registry.py  registry_normalization.py  remove_case_duplicates.py  reputation_system.py  security_scanner.py  sync_and_download.py  sync_main_repo.sh  sync_missing_skills.py  utils.py  (+2 more)
(+287604 files in other folders)
